<resources>
    <string name="app_name">ChatAppC37</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="or_create_my_account">or Create my account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="loading">Loading</string>
    <string name="title_activity_add_room">AddRoomActivity</string>
    <string name="add_room">Add Room</string>
    <string name="room_name">Room name</string>
    <string name="room_description">Room Description</string>
    <string name="rooms">Rooms</string>
    <string name="create">Create</string>
    <string name="send">Send</string>
    <string name="type_message_here">Type your message here...</string>
</resources>